创建Maven模块，引入依赖，创建代码生成器,生成代码，创建application.yml配置文件

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <modules>
         <module>axjd-common</module>
         <module>service-base</module>
+        <module>service-core</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
