--- a/service-core/src/main/resources/application.yml
+++ b/service-core/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
   datasource: # mysql数据库连接
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/srb_core?serverTimezone=GMT%2B8&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/axjd?serverTimezone=GMT%2B8&characterEncoding=utf-8
     username: root
     password: QQnn2791996@
 
